--- a/src/sample/sample.fxml
+++ b/src/sample/sample.fxml
@@ -3,15 +3,38 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.layout.HBox?>
 <GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="center" hgap="10" vgap="10">
+          xmlns:fx="http://javafx.com/fxml" hgap="10" vgap="10">
 
+    <padding>
+        <Insets bottom="10.0" top="10.0" left="10.0" right="10.0"/>
+    </padding>
 
+    <children>
+        <Label text="User Name:"
+               GridPane.columnIndex="0" GridPane.rowIndex="0" GridPane.halignment="RIGHT"/>
+        <TextField fx:id="userName"
+                   GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
+        <Label text="Password:"
+               GridPane.columnIndex="0" GridPane.rowIndex="1" GridPane.halignment="RIGHT"/>
+        <PasswordField fx:id="password"
+                       GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
+        <HBox GridPane.columnIndex="0" GridPane.rowIndex="2"
+              GridPane.columnSpan="2" alignment="CENTER"
+              spacing="10">
+            <children>
+                <Button text="Ok" onAction="#okAction"></Button>
+                <Button text="Cancel" onAction="#cancelAction"></Button>
+            </children>
 
+        </HBox>
 
-
+    </children>
 
 
 </GridPane>
